--- a/client/tslint.yaml
+++ b/client/tslint.yaml
@@ -20,4 +20,4 @@ rules :
     no-console : false
     no-var-requires : false
     member-access : false
-    no-any : false
+    no-unsafe-any : false
