--- a/server/package.json
+++ b/server/package.json
@@ -32,7 +32,9 @@
     "prestart": "run-script build:js"
   },
   "dependencies": {
+    "@types/express": "^4.17.2",
     "@types/source-map-support": "^0.5.0",
+    "express": "^4.17.1",
     "source-map-support": "^0.5.16"
   },
   "devDependencies": {
