--- a/server/package.json
+++ b/server/package.json
@@ -32,8 +32,13 @@
     "prestart": "run-script build:js"
   },
   "dependencies": {
+    "@types/body-parser": "^1.17.1",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/source-map-support": "^0.5.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "source-map-support": "^0.5.16"
   },
