--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "@types/express": "^4.17.2",
     "@types/express-graphql": "^0.9.0",
     "@types/graphql": "^14.5.0",
+    "@types/lodash": "^4.14.149",
     "@types/source-map-support": "^0.5.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -44,6 +45,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
+    "lodash": "^4.17.15",
     "source-map-support": "^0.5.16"
   },
   "devDependencies": {
