--- a/server/package.json
+++ b/server/package.json
@@ -46,7 +46,8 @@
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
     "lodash": "^4.17.15",
-    "source-map-support": "^0.5.16"
+    "source-map-support": "^0.5.16",
+    "ts-node": "^8.6.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.5",
