--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
     "@types/express-graphql": "^0.9.0",
     "@types/graphql": "^14.5.0",
     "@types/lodash": "^4.14.149",
+    "@types/mongoose": "^5.5.43",
     "@types/source-map-support": "^0.5.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -46,6 +47,7 @@
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
     "lodash": "^4.17.15",
+    "mongoose": "^5.8.9",
     "source-map-support": "^0.5.16",
     "ts-node": "^8.6.2"
   },
