--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "@types/express": "^4.17.2",
     "@types/express-graphql": "^0.9.0",
     "@types/graphql": "^14.5.0",
+    "@types/jsonwebtoken": "^8.3.7",
     "@types/lodash": "^4.14.149",
     "@types/mongoose": "^5.5.43",
     "@types/source-map-support": "^0.5.0",
@@ -46,6 +47,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.5.8",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.8.9",
     "source-map-support": "^0.5.16",
