--- a/server/package.json
+++ b/server/package.json
@@ -32,7 +32,10 @@
     "prestart": "run-script build:js"
   },
   "dependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.17.1",
+    "@types/chalk": "^2.2.0",
+    "@types/clear": "^0.1.0",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/express-graphql": "^0.9.0",
@@ -41,7 +44,10 @@
     "@types/lodash": "^4.14.149",
     "@types/mongoose": "^5.5.43",
     "@types/source-map-support": "^0.5.0",
+    "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
+    "chalk": "^3.0.0",
+    "clear": "^0.1.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -60,7 +66,7 @@
     "@babel/plugin-proposal-class-properties": "^7.7.4",
     "@babel/plugin-proposal-decorators": "^7.7.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
-    "@babel/plugin-transform-typescript": "^7.7.4",
+    "@babel/plugin-transform-typescript": "^7.8.3",
     "@babel/preset-env": "^7.7.6",
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.14",
