--- a/server/package.json
+++ b/server/package.json
@@ -56,8 +56,10 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "mongoose": "^5.8.9",
+    "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.16",
-    "ts-node": "^8.6.2"
+    "ts-node": "^8.6.2",
+    "typeorm": "^0.2.22"
   },
   "devDependencies": {
     "@babel/cli": "^7.7.5",
