--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
     "@types/graphql": "^14.5.0",
     "@types/jsonwebtoken": "^8.3.7",
     "@types/lodash": "^4.14.149",
+    "@types/mongodb": "^3.3.15",
     "@types/source-map-support": "^0.5.0",
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
