--- a/server/package.json
+++ b/server/package.json
@@ -60,6 +60,7 @@
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.16",
     "ts-node": "^8.6.2",
+    "type-graphql": "^0.17.6",
     "typeorm": "^0.2.22"
   },
   "devDependencies": {
