--- a/server/package.json
+++ b/server/package.json
@@ -44,6 +44,7 @@
     "@types/lodash": "^4.14.149",
     "@types/mongodb": "^3.3.15",
     "@types/source-map-support": "^0.5.0",
+    "apollo-server-express": "^2.9.16",
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "chalk": "^3.0.0",
