--- a/server/package.json
+++ b/server/package.json
@@ -62,6 +62,7 @@
     "source-map-support": "^0.5.16",
     "ts-node": "^8.6.2",
     "type-graphql": "^0.17.6",
+    "typedi": "^0.8.0",
     "typeorm": "^0.2.22"
   },
   "devDependencies": {
