--- a/server/package.json
+++ b/server/package.json
@@ -45,6 +45,7 @@
     "@types/mongodb": "^3.3.15",
     "@types/source-map-support": "^0.5.0",
     "apollo-server-express": "^2.9.16",
+    "babel-plugin-transform-typescript-metadata": "^0.2.2",
     "bcrypt": "^3.0.7",
     "body-parser": "^1.19.0",
     "chalk": "^3.0.0",
